--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^6.7.1",
     "postcss-import": "^15.0.0",
     "postcss-loader": "^7.0.1",
+    "postcss-mixins": "^9.0.4",
     "postcss-nested": "^6.0.0",
     "postcss-simple-vars": "^7.0.0",
     "style-loader": "^3.3.1",
