--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
+    "webp": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
